# Claude-3D

./: .env.example  .gitignore  README.md  SKILL.md
.claude/: settings.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  job.py  message.py  session.py
backend/app/routers/: chat.py  files.py  jobs.py  providers.py
backend/app/schemas/: __init__.py  chat.py  job.py
backend/app/services/: claude.py  executor.py  job_queue.py  renderer.py
backend/app/services/llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  ollama.py
backend/app/utils/: file_manager.py  sandbox.py
backend/app/workers/: cad_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_endpoint.py
backend/tests/unit/: test_claude_service.py  test_sandbox.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: next.config.ts  package.json  playwright.config.ts  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  CodeBlock.tsx  MessageBubble.tsx
frontend/src/components/layout/: AppHeader.tsx  ProviderSelector.tsx  ResizableDivider.tsx  WorkspaceLayout.tsx
frontend/src/components/shared/: JobStatusBadge.tsx  LoadingSpinner.tsx  ToastNotification.tsx
frontend/src/components/viewer/: DownloadBar.tsx  ModelMesh.tsx  (+3 more)
frontend/src/hooks/: useChat.ts  useJob.ts  useResizePanel.ts
frontend/src/lib/: api.ts  streaming.ts
frontend/src/store/: workspace.ts
frontend/src/types/: api.ts
frontend/tests/e2e/: chat-flow.spec.ts
img2print/: CLAUDE.md  pyproject.toml
img2print/src/img2print/: app.py
img2print/src/img2print/core/: blender_ctx.py  exporter.py  image_io.py  mesh_validator.py  pipeline.py  registry.py
img2print/src/img2print/styles/: base.py  fabric.py  line_art.py  lithophane.py  multi_color.py  relief_depth.py  stencil.py
img2print/src/img2print/ui/: main_tab.py  params.py  preview.py
img2print/src/img2print/utils/: logging.py  progress.py
img2print/tests/: conftest.py  test_fabric.py  test_line_art.py  test_lithophane.py  test_mesh_validator.py  test_pipeline.py  test_stencil.py
(+2 files in other folders)
