[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-3d-backend"
version = "0.1.0"
description = "Backend API for Claude-3D CAD generation app"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "cadquery>=2.4.0",
    "trimesh>=4.4.0",
    "pyrender>=0.1.45",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]
