[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img2print"
version = "0.1.0"
description = "Convert 2D images into 3D-printable models via multiple artistic styles"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0",
    "huggingface-hub>=0.25.1,<1.0",
    "bpy>=4.0",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "numpy>=1.26",
    "scikit-image>=0.22",
    "networkx>=3.2",
    "trimesh>=4.0",
    "pymeshlab>=2023.12",
]

[project.scripts]
img2print = "img2print.app:main"

[project.optional-dependencies]
depth = [
    "transformers>=4.35",
    "torch>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/img2print"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.15.11",
]
